changing the contact section styling

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
       </div>
     </section>
     <!--  -->
-    <br /><br />
     <div class="container">
       <div class="row">
         <div class="col-md-12 d-flex align-items-center">
@@ -138,19 +137,22 @@
     </div>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-5 text-center">
-          <div class="card solo-card shadow-lg justify-content-center">
+        <div class="card-group text-center">
+          <div class="card justify-content-center">
             <img
               src="./assets/images/Census.png"
-              class="card-img-top"
+              class="card-img-side"
               alt="data.census.gov"
             />
+          </div>
+
+          <div class="card justify-content-center">
             <div class="card-header">
               <h5 class="card-title">Explore Census Data</h5>
             </div>
             <div class="card-body">
               <p class="card-text">
-                Updated the Census Bureau's popular data dissemnation site to
+                Updated the Census Bureau's data dissemnation site to
                 meet modern UI/UX design standards.
               </p>
               <p class="card-text">Vue, MapLibre, Jest, Pinia</p>
@@ -187,7 +189,7 @@
       <!-- card-deck 1 -->
       <div class="container">
         <div class="card-deck">
-          <div class="card shadow-lg">
+          <div class="card shadow-sm">
             <img
               src="./assets/images/farm-house.jpeg"
               class="card-img-top"
@@ -216,7 +218,7 @@
               >
             </div>
           </div>
-          <div class="card shadow-lg justify-content-center">
+          <div class="card shadow-sm justify-content-center">
             <img
               src="./assets/images/development.jpeg"
               class="card-img-top"
@@ -245,7 +247,7 @@
               >
             </div>
           </div>
-          <div class="card shadow-lg justify-content-center">
+          <div class="card shadow-sm justify-content-center">
             <img
               src="./assets/images/Disturbance.png"
               class="card-img-top"
@@ -299,13 +301,16 @@
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-5 text-center">
-            <div class="card solo-card shadow-lg justify-content-center">
+          <div class="card-group text-center">
+            <div class="card justify-content-center">
               <img
                 src="./assets/images/Brazil.jpg"
-                class="card-img-top"
+                class="card-img-side"
                 alt="Sao Paulo River, Brazil"
               />
+            </div>
+
+            <div class="card shadow-sm justify-content-center">
               <div class="card-header">
                 <h5 class="card-title">Project Fluvius</h5>
               </div>
@@ -442,14 +447,10 @@
         </div>
         <br id="contact" /><br /><br />
         <div class="row d-flex justify-content-center align-items-center">
-          <!-- <br><br>
-                <p>
-                    For more details list please review my resume or contact me below. 
-                </p> -->
         </div>
       </div>
     </section>
-    <!-- Contact Me Form -->
+    <!-- Contact Me -->
     <section class="whiteSection">
       <div class="row">
         <div
@@ -472,13 +473,13 @@
             ></a>
           </div>
         </div>
-        <div class="col d-flex justify-content-left align-items-left">
+        <div class="d-flex justify-content-right align-items-right">
           <iframe
-            src="assets/images/Resume 12_2021.pdf"
+            src="assets/images/Van Neste - Resume 10_2023.pdf"
             title="Kristen's Resume"
-            height="400px"
-            width="600px"
-            class="shadow-lg"
+            height="300px"
+            width="500px"
+            class="shadow-sm"
           >
           </iframe>
         </div>
