formatting with prettier

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             </div>
             <div class="card-body">
               <p class="card-text">
-                Updated the Census Bureau's data dissemnation site to
-                meet modern UI/UX design standards.
+                Updated the Census Bureau's data dissemnation site to meet
+                modern UI/UX design standards.
               </p>
               <p class="card-text">Vue, MapLibre, Jest, Pinia</p>
             </div>
@@ -446,8 +446,7 @@
           </div>
         </div>
         <br id="contact" /><br /><br />
-        <div class="row d-flex justify-content-center align-items-center">
-        </div>
+        <div class="row d-flex justify-content-center align-items-center"></div>
       </div>
     </section>
     <!-- Contact Me -->
@@ -486,7 +485,9 @@
       </div>
     </section>
     <!-- Footer -->
-    <footer class="blackSection footer d-flex justify-content-center">kmvn © 2023</footer>
+    <footer class="blackSection footer d-flex justify-content-center">
+      kmvn © 2023
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
