--- a/index.html
+++ b/index.html
@@ -85,15 +85,6 @@
               when it is combined with a powerful interface and clean design.
             </p>
 
-            <p>
-              If you are interested in working with me, please reach out:
-              <u
-                ><a style="color: white" href="mailto:kmvanneste17@gmail.com"
-                  >kmvanneste17@gmail.com</a
-                ></u
-              >
-              <!-- <img src="avatar.png" class="avatar" alt="avatar"/> -->
-            </p>
           </div>
         </div>
         <div id="projects"></div>
@@ -101,7 +92,7 @@
     </section>
     <!-- Applications -->
     <!-- Header -->
-    <section class="whiteSection">
+    <section class="sunsetSection">
       <div class="app_container">
         <div class="row">
           <div class="col-md-12 d-flex justify-content-center align-items-center">
@@ -158,7 +149,7 @@
       </div>
     </div>
     <!-- 2nd Row -->
-    <section class="whiteSection">
+      <br /><br />
       <div class="container">
         <div class="row">
           <div class="col-md-12 d-flex align-items-center">
@@ -338,10 +329,10 @@
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
             <img
+              class="icon_img"
               width="40"
               height="40"
               src="https://img.icons8.com/ios/50/000000/typescript.png"
-              style="background-color: white; margin: 20px"
               alt="typescript"
             />
             <p>TypeScript</p>
@@ -376,7 +367,7 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-            <i class="fab fa-vuejs fa-3x" style="color: #fff"></i>
+            <i class="fab fa-vuejs fa-3x"></i>
             <p>Vue</p>
           </div>
           <div
@@ -399,13 +390,7 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-            <img
-              style="margin-bottom: 25px; padding: 12px"
-              src="./assets/icons/icons8-material-ui-96 (1).png"
-              alt="Mapbox Icon"
-              height="65"
-              width="75"
-            />
+<i class="fa fa-solid fa-palette fa-3x"></i>
             <p>Material-UI</p>
           </div>
           <div
@@ -423,20 +408,16 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-            <img
-              style="margin-bottom: 35px"
-              src="./assets/icons/mapbox-logo-white.png"
-              alt="Mapbox Icon"
-              height="25"
-              width="110"
-            />
-            <p style="margin-bottom: -30px">MapboxGL</p>
+            <i class="fa fa-solid fa-map-pin fa-3x"></i>
+            <p>MapboxGL</p>
           </div>
         </div>
         <br id="contact" /><br /><br />
         <div class="row d-flex justify-content-center align-items-center"></div>
       </div>
     </section>
+
+
     <!-- Contact Me -->
     <section class="sunsetSection">
       <div class="row">
@@ -455,26 +436,17 @@
               ><i class="fab fa-github fa-2x"></i
             ></a>
             <a class="logo" href="mailto:kmvanneste17@gmail.com">
-              <i class="fa fa-solid fa-envelope fa-2x" style="color: #000"></i
+              <i class="fa fa-solid fa-envelope fa-2x" ></i
             ></a>
           </div>
         </div>
-        <!-- <div class="d-flex justify-content-right align-items-right">
-          <iframe
-            src="assets/images/Van Neste - Resume 10_2023.pdf"
-            title="Kristen's Resume"
-            height="300px"
-            width="500px"
-            class="shadow-sm"
-          >
-          </iframe>
-        </div> -->
       </div>
     </section>
     <!-- Footer -->
     <footer class="blackSection footer d-flex justify-content-center">
       kmvn © 2023
     </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
