full purple theme

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <!-- About Me -->
-    <section class="top_section blackSection" id="about">
+    <section class="top_section" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 justify-content-center align-items-left">
@@ -92,7 +92,7 @@
     </section>
     <!-- Applications -->
     <!-- Header -->
-    <section class="sunsetSection">
+    <section class="purpleSection">
       <div class="app_container">
         <div class="row">
           <div class="col-md-12 d-flex justify-content-center align-items-center">
@@ -315,7 +315,7 @@
     </section>
   </section>
     <!-- Skills -->
-    <section class="blackSection">
+    <section class="purpleToBlackSection">
       <div class="container">
         <div class="row">
           <div
@@ -409,7 +409,7 @@
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
             <i class="fa fa-solid fa-map-pin fa-3x"></i>
-            <p>MapboxGL</p>
+            <p>Mapbox</p>
           </div>
         </div>
         <br id="contact" /><br /><br />
@@ -419,12 +419,12 @@
 
 
     <!-- Contact Me -->
-    <section class="sunsetSection">
+    <section class="blackSection">
       <div class="row">
         <div
-          class="col flex-column d-flex justify-content-left align-items-left"
+          class="col flex-column d-flex justify-content-center align-items-center"
         >
-          <h2>Kristen M. Van Neste</h2>
+          <h2>Let's connect:</h2>
           <div class="d-flex flex-row justify-content-left align-items-center">
             <a
               class="logo"
@@ -443,7 +443,7 @@
       </div>
     </section>
     <!-- Footer -->
-    <footer class="blackSection footer d-flex justify-content-center">
+    <footer class="footer d-flex justify-content-center">
       kmvn © 2023
     </footer>
 
