switched to blue theme

--- a/index.html
+++ b/index.html
@@ -62,16 +62,14 @@
     <section class="top_section" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 justify-content-center align-items-left">
-            <h3>Hello World</h3>
-            <br />
+          <div class="col-lg-3 justify-content-center align-items-center">
+            <img class="headshot" src="./assets/images/IMG_1666.jpeg" alt="headshot" width="220" height="220">
           </div>
-        </div>
-        <div class="row">
-          <div
-            class="col-lg-12 justify-content-center align-items-left description"
-          >
-            <p>
+
+          <div class="col-lg-9 justify-content-center align-items-left">
+            <h3>Hi,</h3>
+            <br />
+             <p>
               My name is Kristen Michelle Van Neste and I am a Lead Front-End
               Engineer at Booz Allen Hamilton (BAH) in Washington, D.C.
             </p>
@@ -84,7 +82,6 @@
               valuable asset to your team. Data can tell a story, especially
               when it is combined with a powerful interface and clean design.
             </p>
-
           </div>
         </div>
         <div id="projects"></div>
@@ -443,7 +440,7 @@
       </div>
     </section>
     <!-- Footer -->
-    <footer class="footer d-flex justify-content-center">
+    <footer class="footer purpleSection d-flex justify-content-center">
       kmvn © 2023
     </footer>
 
