--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
 
     <!-- Name Banner -->
-    <section class="console_section">
+    <section class="console_section blackToPurpleSection">
       <div class="console-container">
         <span id="text"></span>
         <div class="console-underscore" id="console">&#95;</div>
