--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
 
     <!-- Name Banner -->
     <section class="console_section blackToPurpleSection">
+
+          <div class="row justify-content-center align-items-end name-row">
+          <span>Kristen Michelle Van Neste</span>
+        </div>
       <div class="container console-container">
+
         <div class="row text-row">
           <span id="text"></span>
           <div class="console-underscore" id="console">&#95;</div>
@@ -62,10 +67,12 @@
       <div class="row arrow-row bounce">
         <i class="fa fa-sharp fa-angle-down fa-2x arrow"></i>
       </div>
+      
     </section>
+  
 
     <!-- About Me -->
-    <section class="purpleSection" id="about">
+    <section class="purpleSection athens2" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-3 justify-content-center align-items-center">
@@ -106,7 +113,8 @@
           </div>
         </div>
 
-        <div id="clientsCarousel" class="carousel slide" data-ride="carousel">
+                
+        <div id="clientsCarousel" class="carousel slide justify-content-center" data-ride="carousel">
           <div class="carousel-inner">
             <!-- Client 1 -->
             <div class="carousel-item active">
@@ -125,7 +133,7 @@
               <div class="client-container">
                 <img
                   height="200"
-                  src="./assets//images/microsoft-full-logo.png"
+                  src="./assets//images/Microsoft Logo copy.png"
                   class="d-block mx-auto ms-image"
                   alt="Microsoft logo"
                 />
@@ -270,39 +278,35 @@
       </div>
       <!-- card-deck 1 -->
       <div class="container">
-        <div class="card-deck">
+        <div class="card-deck justify-content-center">
           <div class="card shadow-sm">
             <img
-              src="./assets/images/farm-house.jpeg"
+              src="./assets/images/Microsoft_apps.png"
               class="card-img-top"
-              alt="Image farm house in a field"
+              alt="Planetary Computer Applications"
             />
             <div class="card-header text-center">
               <h5 class="card-title">
-                Mapping wildlife connectivity across U.S. agricultural lands
+                Microsoft Planetary Computer Applications
               </h5>
             </div>
             <div class="card-body">
               <p class="card-text">
-                Exploring the role working landscapes play in facilitating
-                wildlife movement.
-              </p>
-              <p class="card-text">
-                React, MapboxGL, DeckGL, Azure, Material-UI
+                Partnered with Microsoft to develop some of the first applications utilizing their AI for Earth software
               </p>
             </div>
             <div class="card-footer text-center">
               <a
-                href="https://cspbeta.z22.web.core.windows.net/"
+                href="https://analytics-lab.org/ecosystemmonitoring/"
                 class="btn btn-sm btn-dark"
                 target="blank"
-                >Explore the App</a
+                >Explore the Project</a
               >
             </div>
           </div>
           <div class="card shadow-sm justify-content-center">
             <img
-              src="./assets/images/development.jpeg"
+              src="./assets/images/AnalyticsLab.png"
               class="card-img-top"
               alt="Image of construction site in front of a sunset"
             />
@@ -316,47 +320,16 @@
                 Leveraging Azure cloud infrastructure to create estimates and
                 maps of human land use metrics.
               </p>
-              <p class="card-text">
-                React, MapboxGL, Azure, Material-UI, ReCharts
-              </p>
             </div>
             <div class="card-footer text-center">
               <a
-                href="https://cspbeta.z22.web.core.windows.net/project2"
+                href="https://analytics-lab.org/ecosystemmonitoring/"
                 class="btn btn-sm btn-dark"
                 target="blank"
                 >Explore the App</a
               >
             </div>
           </div>
-          <div class="card shadow-sm justify-content-center">
-            <img
-              src="./assets/images/Disturbance.png"
-              class="card-img-top"
-              alt="Image for the MS Disturbance Web app"
-            />
-            <div class="card-header text-center">
-              <h5 class="card-title">
-                Monitoring forest change at scale with AI
-              </h5>
-            </div>
-            <div class="card-body">
-              <p class="card-text">
-                Using the power of artificial intelligence to model and monitor
-                fire disturbance over time.
-              </p>
-              <p class="card-text">
-                React, MapboxGL, Azure, Material-UI, ReCharts
-              </p>
-            </div>
-            <div class="card-footer text-center">
-              <a
-                href="https://cspbeta.z22.web.core.windows.net/project3"
-                class="btn btn-sm btn-dark"
-                target="blank"
-                >Explore the App</a
-              >
-            </div>
           </div>
         </div>
       </div>
@@ -534,18 +507,17 @@
               target="_blank"
               ><i class="contact fab fa-linkedin fa-3x"></i
             ></a>
-            <a
-              class="contact"
-              href="https://github.com/kmvanneste"
-              target="_blank"
-              ><i class="contact fab fa-github fa-3x"></i
-            ></a>
             <a class="contact" href="mailto:kmvanneste17@gmail.com">
               <i class="contact fa fa-solid fa-envelope fa-3x"></i
             ></a>
-          </div>
+          </div>  
+
         </div>
+
       </div>
+        <div class="d-flex flex-row justify-content-center align-items-center">
+            <iframe src="./assets/images/KristenMVanNesteResume.pdf" height="500px" min-width="400px" width="800px" title="Resume"></iframe>
+        </div>
       <br /><br /><br /><br /><br />
     </section>
 
