--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   class="d-block mx-auto ms-image"
                   alt="Microsoft logo"
                 />
-                <p class="client-text">Microsoft's AI for Earth</p>
+                <p class="client-text">Microsoft AI for Earth</p>
               </div>
             </div>
 
@@ -523,7 +523,7 @@
 
     <!-- Footer -->
     <footer class="footer purpleSection d-flex justify-content-center">
-      kmvn © 2023
+      kmvn © 2024
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
