fixed nav scroll

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </nav>
 
   <!-- Name Banner -->
-  <section class="console_section blackToPurpleSection">
+  <section class="console_section blackSection">
 
     <div class="row justify-content-center align-items-end name-row">
       <span>Kristen Michelle Van Neste</span>
@@ -48,14 +48,13 @@
       </div>
     </div>
     <div class="row arrow-row bounce">
-      <i class="fa fa-sharp fa-angle-down fa-2x arrow"></i>
+      <i id="about" class="fa fa-sharp fa-angle-down fa-2x arrow"></i>
     </div>
 
   </section>
 
-
   <!-- About Me -->
-  <section class="purpleSection athens2" id="about">
+  <section class="blackToPurpleSection">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 justify-content-center align-items-center">
@@ -160,6 +159,7 @@
         </div>
       </div>
     </div>
+
     <!-- First Row -->
     <div class="container">
       <div class="row">
@@ -273,8 +273,8 @@
             </p>
           </div>
           <div class="card-footer text-center">
-            <a href="https://analytics-lab.org/ecosystemmonitoring/" class="btn btn-sm btn-primary"
-              target="blank">Explore
+            <a href="https://analytics-lab.org/ecosystemmonitoring/" class="btn btn-sm btn-primary" target="blank">Learn
+              about
               the Project</a>
           </div>
         </div>
@@ -341,15 +341,19 @@
               <a href="https://fluviuswebapp.z22.web.core.windows.net" class="btn btn-sm btn-primary"
                 target="blank">Explore the App</a>
             </div>
+
           </div>
         </div>
       </div>
     </div>
+    <div id="skills"></div>
+
   </section>
-  <div id="skills"></div>
 
   <!-- Skills -->
+
   <section class="purpleToBlackSection">
+
     <div class="container">
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center align-items-center">
@@ -421,7 +425,7 @@
   </section>
 
 
-  <section class="blackSection" id="contact">
+  <section class="blackSection">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
@@ -466,7 +470,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer purpleSection d-flex justify-content-center">
+  <footer id="contact" class="footer purpleSection d-flex justify-content-center">
     kmvn © 2024
   </footer>
 
