--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/input.css" />
 
   <title>Kristen M. Van Neste's Portfolio</title>
+  <link rel="icon" type="image/png" href="./assets/images/K.png">
 </head>
 
 <body>
