--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
             <div class="card-body">
               <p class="card-text">
-                Supported the Assistant Secretary of Defense for Energy, Installations, and Environment Environment to
+                Supported the Assistant Secretary of Defense for Energy, Installations, and Environment to
                 modernize the Climate Resilience Portal.
               </p>
               <!-- <p class="card-text">React, JavaScript, Leaflet</p> -->
