changed hero background, updated text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
 
   <!-- Name Banner -->
-  <section class="console_section blackSection">
+  <section class="console_section athensSection">
 
     <div class="row justify-content-center align-items-end name-row">
       <span>Kristen Michelle Van Neste</span>
@@ -104,7 +104,7 @@
             <div class="client-container">
               <img height="200" src="./assets//images/Microsoft Logo copy.png" class="d-block mx-auto ms-image"
                 alt="Microsoft logo" />
-              <p class="client-text">Microsoft AI for Earth</p>
+              <p class="client-text">Microsoft</p>
             </div>
           </div>
           <!-- Client 3 -->
@@ -121,7 +121,7 @@
             <div class="client-container">
               <img height="200" src="./assets/images/Logo_BLM.svg.png" class="d-block mx-auto"
                 alt="U.S. Bureau of Land Management" />
-              <p class="client-text">Bureau of Land Management (BLM)</p>
+              <p class="client-text">Bureau of Land Management</p>
             </div>
           </div>
           <!-- Client 5 -->
