adjusted hero image, made font larger

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
         <span id="text"></span>
         <div class="console-underscore" id="console">&#95;</div>
       </div>
-    </div>
-    <div class="row arrow-row bounce">
-      <i id="about" class="fa fa-sharp fa-angle-down fa-2x arrow"></i>
-    </div>
+    </div >
+    <!-- <div class="row arrow-row bounce">
+      <i  class="fa fa-sharp fa-angle-down fa-2x arrow"></i>
+    </div> -->
 
   </section>
 
   <!-- About Me -->
-  <section class="blackToPurpleSection">
+  <section class="blackToPurpleSection" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 justify-content-center align-items-center">
-          <img class="headshot" src="./assets/images/IMG_1666.jpeg" alt="headshot" width="230" height="230" />
+          <img class="headshot" src="./assets/images/IMG_1666.jpeg" alt="headshot" width="250" height="250" />
         </div>
 
         <div class="col-lg-9 justify-content-center align-items-left">
@@ -94,7 +94,7 @@
           <!-- Client 1 -->
           <div class="carousel-item active">
             <div class="client-container">
-              <img height="200" src="./assets/images/Seal_of_the_President.svg.png" class="d-block mx-auto"
+              <img height="220" src="./assets/images/Seal_of_the_President.svg.png" class="d-block mx-auto"
                 alt="U.S. Air" />
               <p class="client-text">Air Force One</p>
             </div>
@@ -102,7 +102,7 @@
           <!-- Client 2 -->
           <div class="carousel-item">
             <div class="client-container">
-              <img height="200" src="./assets//images/Microsoft Logo copy.png" class="d-block mx-auto ms-image"
+              <img height="220" src="./assets//images/Microsoft Logo copy.png" class="d-block mx-auto ms-image"
                 alt="Microsoft logo" />
               <p class="client-text">Microsoft</p>
             </div>
@@ -119,7 +119,7 @@
           <!-- Client 4 -->
           <div class="carousel-item">
             <div class="client-container">
-              <img height="200" src="./assets/images/Logo_BLM.svg.png" class="d-block mx-auto"
+              <img height="220" src="./assets/images/Logo_BLM.svg.png" class="d-block mx-auto"
                 alt="U.S. Bureau of Land Management" />
               <p class="client-text">Bureau of Land Management</p>
             </div>
@@ -127,7 +127,7 @@
           <!-- Client 5 -->
           <div class="carousel-item">
             <div class="client-container">
-              <img height="200" src="./assets/images/Seal_Census.png" class="d-block mx-auto"
+              <img height="220" src="./assets/images/Seal_Census.png" class="d-block mx-auto"
                 alt="U.S. Bureau of Land Management" />
               <p class="client-text">
                 U.S. Census Bureau Center for Data Dissemination
@@ -156,7 +156,7 @@
     <div class="app_container">
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center align-items-center">
-          <h2 class="mainSectionHeader">Public Facing Applications</h2>
+          <h1 class="mainSectionHeader">Public Facing Applications</h1>
         </div>
       </div>
     </div>
@@ -358,7 +358,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center align-items-center">
-          <h2 class="mainSectionHeader">Strongest Skills</h2>
+          <h1 class="mainSectionHeader">Strongest Skills</h1>
         </div>
       </div>
       <div class="row">
